layout shift correction

--- a/styles/fields/input.css
+++ b/styles/fields/input.css
@@ -4,7 +4,8 @@ select {
 	appearance: none;
 	width: 100%;
 	border-radius: 0.5rem;
-	border: 1px solid var(--stroke-default);
+	border: 2px solid transparent;
+	outline: 1px solid var(--stroke-default);
 
 	padding: 0.75rem 1rem;
 
@@ -20,9 +21,11 @@ label {
 }
 
 input:focus,
+input:hover,
 select:focus,
+select:hover,
 textarea:focus,
-input[type="date"]:focus-within {
+textarea:hover input[type="date"]:focus-within {
 	outline: 0.25rem solid var(--surface-secondary);
 	border: 0.125rem solid var(--stroke-highlight);
 	outline-offset: 0.1px;
